version 0.4.0 (10/28/2003):

10/28/2003 Bob Rossi <bob@brasko.net>

   * tgdb-base/src/Makefile.in: ran autoregen.sh

10/27/2003 Bob Rossi <bob@brasko.net>

   * TODO: finished everything for .4 release

10/24/2003 Bob Rossi <bob@brasko.net>

   * TODO: updating for .4 release

10/24/2003 Bob Rossi <bob@brasko.net>

   * tgdb_types.h: update comments

10/24/2003 Bob Rossi <bob@brasko.net>

   * TODO: Add a future task
   * tgdb.c: tgdb_deliver_command, add some code to print the commands being
   passed to the debugger.

10/23/2003 Bob Rossi <bob@brasko.net>

   * TODO: Finished task 'standardize command queue interface'
   * a2-tgdb.h: removed include of tgdb_interface.h.
   added include of tgdb_client_command.h.
   a2_initialize, a2_user_ran_command, a2_parse_io,
   a2_get_source_absolute_filename, a2_get_inferior_sources, a2_change_prompt,
   a2_command_callback, a2_completion_callback, a2_open_new_tty, 
   removed command_container parameter and comments.
   Added function a2_get_client_commands.
   * annotate_two.h: removed include of tgdb_interface.h.
   added include of tgdb_client_command.h.
   removed 'command_container' member and replaced it with
   client_command_list.
   * command.h:removed include of tgdb_interface.h.
   added include of tgdb_client_command.h.
   commands_parse_source, commands_issue_command, commands_user_ran_command,
   removed command_container parameter.
   * data.h:removed include of tgdb_interface.h.
   added include of tgdb_client_command.h.
   * a2-tgdb.c: a2_set_inferior_tty, a2_open_new_tty, a2_initialize,
   a2_parse_io, a2_get_client_commands, a2_get_inferior_sources,
   a2_change_prompt, a2_command_callback, a2_completion_callback,
   a2_user_ran_command, removed 'command_container' parameter member and
   implementation.
   * annotate.c: handle_source, don't pass parameter just removed.
   * commands.c: commands_parse_source, commands_prepare_for_command,